--- a/Collaborative Filtering/collaborative-filtering.ipynb
+++ b/Collaborative Filtering/collaborative-filtering.ipynb
@@ -8,7 +8,7 @@
     "## Collaborative Filtering (CF)\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/taxonomy.png\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=185fQI_jd3DewJRSKO7TEIZH6Sjr15UGc\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "- The most prominent approach to generate recommendations\n",
@@ -46,7 +46,7 @@
     "As we learned in the lecture, we can factorize **ratings matrix** into **user matrix** and **item matrix**.\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/mf.png\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=1880BHOvpFW66QjjjnnN-exW_HOyX9EkU\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "Ratings can be interpreted as **dot product** of user latent and item latent.  \n",
@@ -93,8 +93,9 @@
     "Gradient descent is a first-order iterative optimization algorithm for finding local minimum of a differentiable function.  \n",
     "The idea is to take repeated steps in the **opposite direction of the gradient** of the function at the current point, because this is the direction of steepest descent.\n",
     "\n",
+    "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/gd.PNG\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=18o3tBBj9roZsHkLXdatayiGc3faF0zrM\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "If gradient > 0 , then increasing the weight will increase the cost function.  \n",
@@ -110,12 +111,12 @@
     "- **Local minima**\n",
     "    - Sensitive to the starting point\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/gd2.PNG\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=18loEZYzhQAZj0A6192fwIGZ0M2rHeXUO\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "- **Learning rate**\n",
     "    - Too large? Too small?\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/gd3.PNG\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=18ZvvZVl3oTAo9mzILltbE-S-3Cq_a3Yt\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>"
    ]
   },
@@ -127,7 +128,7 @@
     "#### Matrix Factorization\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/mf2.PNG\" width=\"70%\" height=\"70%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=186dDOMvTxDXGrVqW1kke74zMQT3DvE9e\" width=\"70%\" height=\"70%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "We can minimize the below cost function with gradient descent.  \n",
