--- a/MLbasics/MachineLearning.ipynb
+++ b/MLbasics/MachineLearning.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/deep-learning-evolution.png\" width=\"35%\" height=\"35%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=18tLsc2FFkTSJxLN3XZVLzETEKcjWhGIu\" width=\"35%\" height=\"35%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "  <figcaption>Image from NVIDIA Developer</figcaption>\n",
     "</figure>"
    ]
@@ -48,7 +48,7 @@
     "\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/categories.png\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=19EJn6f7JneYCY6NEoeMbUvWsthZIwj7k\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "  <figcaption>Image from http://hochul.net/blog/data_analysis_machine_learning_basic_1s/machinelearningalgorithm/ </figcaption>\n",
     "</figure>"
    ]
@@ -85,7 +85,7 @@
     "It assumes that there is approximately a linear relationship between $X$ and $y$.\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/lr_1.PNG\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=18OhFLae1mn2wClevQbMnAHF3Ft_wc_Rc\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "So we aim to find the yellow line in Linear Regression task."
@@ -585,12 +585,12 @@
     "As we learned in lecture, we can easily extend to **multivariate settings**! (Higher Dimension)\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/lr_2.PNG\" width=\"30%\" height=\"30%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=18EmMHQbcZ4aW7xk1Kkqv8HEDsc3CqgeB\" width=\"30%\" height=\"30%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "We can use above mentioned features in Boston Dataset.\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/lr_4.PNG\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=188XYn1wlIV23uV63jo-bDUb9HtjWLNYZ\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>"
    ]
   },
@@ -669,7 +669,7 @@
     "- $P\\left(y_{i}=1 \\mid X_{i} ; \\boldsymbol{\\beta}\\right)=\\frac{e^{\\beta_{0}+\\beta_{1} X_{i 1}+\\cdots+\\beta_{p} X_{i p}}}{1+e^{\\beta_{0}+\\beta_{1} X_{i 1}+\\cdots+\\beta_{p} X_{i p}}}=\\frac{e^{X_{i}\\boldsymbol{\\beta}}}{1+e^{X_{i} \\boldsymbol{\\beta}}}=\\operatorname{sigmoid}\\left(X_{i}\\right)=\\sigma\\left(X_{i}\\right)$\n",
     "    \n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/logistic1.PNG\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=18R_JLCuSV1G6-Ppar1dTSRu5LpQg4EJq\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "Let's predict the stock market direction with logistic regression!"
@@ -1063,7 +1063,7 @@
     "**Cluster Analysis** is the task of grouping a set of objects in such a way that objects in the same group are more similar to each other than those in other groups (clusters).\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/cluster1.jpg\" width=\"30%\" height=\"30%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=196k1nOo9Ws-ay8Mfyiy-7VAHcWsp2gMS\" width=\"30%\" height=\"30%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
     "### K-Means Clustering\n",
@@ -1071,7 +1071,7 @@
     "K-means clustering minimizes within-cluster variances by iteratively updating centroids position until convergence.\n",
     "\n",
     "<figure class=\"image\">\n",
-    "  <img src=\"../images/clustering2.PNG\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=19-PyMuREjW2Iya3TumxPforhE9uVDQ_1\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>"
    ]
   },
