--- a/Collaborative Filtering/collaborative-filtering2.ipynb
+++ b/Collaborative Filtering/collaborative-filtering2.ipynb
@@ -283,6 +283,62 @@
     "factorizer = MatrixFactorization(train, test, f=40, epsilon = 100)\n",
     "factorizer.fit()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fab2e8-457e-4630-8086-5c6f6ee4eede",
+   "metadata": {},
+   "source": [
+    "#### BPR : Bayesian Personalized Ranking from Implicit Feedback\n",
+    "Basically, collaborative filtering models we learned in class are designed for the item prediction task of **personalized ranking**.  \n",
+    "But none of them is directly optimized for ranking.  \n",
+    "\n",
+    "<figure class=\"image\">\n",
+    "  <img src=\"https://drive.google.com/uc?export=view&id=1zoqtL1RQZaHLDLn9aCR4nuZ2ITxtHHbg\" width=\"70%\" height=\"70%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
+    "</figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "800b5071-1b1a-46be-90bf-296d916e028a",
+   "metadata": {},
+   "source": [
+    "BPR presents a generic optimization criterion *BPR-OPT* for personalized ranking that is maximum posterior estimator derived from a Bayesian analysis of the problem.  \n",
+    "\n",
+    "$p(\\theta|>_{u}) \\propto p(>_{u}|\\theta)p(\\theta)$  \n",
+    "\n",
+    "$\\prod_{u \\in U}{p(\\theta|>_{u})} = \\prod_{(u, i, j) \\in U \\times I \\times I}{p(i >_{u} j|\\theta)^{\\delta((u, i, j)\\in D_{s})}{(1 - p(i >_{u} j|\\theta))^{\\delta((u, j, i)\\notin D_{s})}}}$  \n",
+    "\n",
+    "where $\\delta$ is the indicator function:  \n",
+    "\n",
+    "$\\delta(b) := \\begin{cases} 1 & \\text{if}~b~\\text{is true} \\\\ 0 & \\text{else} \\end{cases}$\n",
+    "\n",
+    "The above formula can be simplified to \n",
+    "\n",
+    "$\\prod_{u \\in U}{p(>_{u}|\\theta)} = \\prod_{(u, i, j) \\in D_{s}}{p(i >_{u} j|\\theta)}$\n",
+    "\n",
+    "So we formulate the maximum posterior estimator to derive our generic optimization criterion for personalized ranking BPR-OPT:  \n",
+    "\n",
+    "$\\ln p(\\theta | >_{u})$  \n",
+    "\n",
+    "$ = \\ln p(>_{u}| \\theta)p(\\theta)$  \n",
+    "\n",
+    "$ = \\prod_{(u, i, j) \\in D_{s}}{\\sigma(\\hat{x}_{uij})p(\\theta)}$  \n",
+    "\n",
+    "$ = \\sum_{(u, i, j) \\in D_{s}}{\\ln\\sigma(\\hat{x}_{uij}) + \\ln p(\\theta)}$  \n",
+    "\n",
+    "$ = \\sum_{(u, i, j) \\in D_{s}}{\\ln\\sigma(\\hat{x}_{uij}) - \\lambda_{\\theta} {\\|\\theta\\|}^{2}}$\n",
+    "\n",
+    "We optimise the criteria using **bootstrapping** based **stochastic gradient descent**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ed058e3-9461-4b79-b276-ed925053deae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
