--- a/MLbasics/MachineLearning.ipynb
+++ b/MLbasics/MachineLearning.ipynb
@@ -105,6 +105,8 @@
     "Linear regression is the most basic and simple approach to supervised learning.  \n",
     "It assumes that there is approximately a linear relationship between $X$ and $y$.\n",
     "\n",
+    "$ y = \\beta X  + b $\n",
+    "\n",
     "<figure class=\"image\">\n",
     "  <img src=\"https://drive.google.com/uc?export=view&id=18OhFLae1mn2wClevQbMnAHF3Ft_wc_Rc\" width=\"40%\" height=\"40%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
