--- a/Content-based Filtering/content-based.ipynb
+++ b/Content-based Filtering/content-based.ipynb
@@ -45,7 +45,7 @@
     "- To identify things that we might like\n",
     "- To help people discover new content\n",
     "- To discover which things go together\n",
-    "- To personalize user experiences in response to user feed back\n",
+    "- To personalize user experiences in response to user feedback\n",
     "\n",
     "\"The most powerful AI space for the next a couple of decades is recommendation systems.  \n",
     "They are going to have the biggest impact on our society because they **affect the information we see, how we learn, what we think, how we communicate.**  \n",
@@ -121,7 +121,190 @@
     "  <img src=\"https://drive.google.com/uc?export=view&id=19HEdheo7WX71eLuYYiEOKABeQ-v4o7nQ\" width=\"50%\" height=\"50%\" title=\"recommender system\" alt=\"recommender system\"></img>\n",
     "</figure>\n",
     "\n",
-    "But this model ignores relative importance between the words. For example, words like '*is, and, or ...*' is frequently used in many documents and may lead to distortion of similarity.  \n",
+    "Let's see how to use Bag-of-Words in Natural Language Processing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b488faba-e674-4efc-931f-d4eaf46a7872",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nltk in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (3.6.3)\n",
+      "Requirement already satisfied: joblib in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (1.0.1)\n",
+      "Requirement already satisfied: regex in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (2021.4.4)\n",
+      "Requirement already satisfied: click in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (8.0.1)\n",
+      "Requirement already satisfied: tqdm in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (4.49.0)\n",
+      "Requirement already satisfied: importlib-metadata in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from click->nltk) (4.0.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.4 in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from importlib-metadata->click->nltk) (3.7.4.3)\n",
+      "Requirement already satisfied: zipp>=0.5 in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from importlib-metadata->click->nltk) (3.4.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/namkyeong/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/namkyeong/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /home/namkyeong/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!pip install nltk\n",
+    "import re\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c0242758-b401-4b17-ae05-e889a3812aa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [\"The first time you see The Second Renaissance it may look boring.\",\n",
+    "          \"Look at it at least twice and definitely watch part 2.\", \n",
+    "          \"It will change your view of the matrix\",\n",
+    "          \"Are the human people the ones who started the war?\",\n",
+    "          \"Is AI a bad thing?\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eafb6590-46f6-40d2-88f5-54891f514dde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = stopwords.words(\"english\") # to remove the meaningless words\n",
+    "lemmatizer = WordNetLemmatizer() # to find the root of the word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "092660dd-1a53-4efc-9e8b-5a929d0b2b16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize(text):\n",
+    "    # normalize case and remove punctuation\n",
+    "    text = re.sub(r\"[^a-zA-Z0-9]\", \" \", text.lower())\n",
+    "   \n",
+    "    # tokenize text\n",
+    "    tokens = word_tokenize(text)\n",
+    "   \n",
+    "    # lemmatize and remove stop words\n",
+    "    tokens = [lemmatizer.lemmatize(word) for word in tokens if word not in stop_words]\n",
+    "   \n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6ff1e2b4-bd81-427f-a6d2-f2e0fd716f5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The',\n",
+       " 'first',\n",
+       " 'time',\n",
+       " 'you',\n",
+       " 'see',\n",
+       " 'The',\n",
+       " 'Second',\n",
+       " 'Renaissance',\n",
+       " 'it',\n",
+       " 'may',\n",
+       " 'look',\n",
+       " 'boring',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_tokenize(corpus[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b6bf7c89-806a-4605-8bad-ffa80f462be9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['first', 'time', 'see', 'second', 'renaissance', 'may', 'look', 'boring']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenize(corpus[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e8bffe2-34b2-45c2-817e-156776e9ab85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# initialize count vectorizer object\n",
+    "vect = CountVectorizer(tokenizer = tokenize)\n",
+    "\n",
+    "# get counts of each token(word) in text data\n",
+    "X = vect.fit_transform(corpus)\n",
+    "\n",
+    "X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49d88ba2-72af-48ed-9760-a70a7a4a7049",
+   "metadata": {},
+   "source": [
+    "But this model ignores relative importance between the words. For example, words like 'may' would be frequently used in many documents and may lead to distortion of similarity.  \n",
     "To overcome the problem, TF-IDF consider the relative importance of a term."
    ]
   },
@@ -141,12 +324,6 @@
     "**TF-IDF** is used to evaluate how important a word is to corpus of documents.   \n",
     "$tf-idf_{t} = (1 + \\log{{tf}_{t,d}})\\log{\\frac{N}{df_t}}$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c620b13-263d-4cf3-8f7c-e4fb034f3221",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -189,6 +366,19 @@
    "source": [
     "# Movie metadata\n",
     "movie_data = pd.read_csv('./movies_metadata.csv')\n",
+    "\n",
+    "print(movie_data.shape)\n",
+    "print(movie_data.columns)\n",
+    "movie_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c66c2c1-f858-4866-83d3-86e9187be184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "movie_data =  movie_data.loc[movie_data['original_language'] == 'en', :]\n",
     "movie_data = movie_data[['id', 'title', 'original_language', 'genres']]\n",
     "\n",
@@ -237,13 +427,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e947453-185f-4a9e-80b8-bb5188bbeef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_data.genres[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10100667-4ee2-4759-b779-676cd3bfdf8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "movie_data['genres'] = movie_data['genres'].apply(literal_eval)\n",
     "movie_data['genres'] = movie_data['genres'].apply(lambda x : [d['name'] for d in x]).apply(lambda x : \" \".join(x))\n",
-    "\n",
+    "movie_data['genres']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e4d079c-e2bd-4803-a325-9c299fdc2c9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "movie_data['keywords'] = movie_data['keywords'].apply(literal_eval)\n",
     "movie_data['keywords'] = movie_data['keywords'].apply(lambda x : [d['name'] for d in x]).apply(lambda x : \" \".join(x))\n",
     "\n",
@@ -408,23 +617,6 @@
     "    - Effective for providing recommendations for new items, but not for new users\n",
     "    \n",
     "<span style=\"color:red\">**Pure content-based systems are rarely found in commercial environments**</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49f945d1-db69-42d1-83ba-90f065dee477",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "크롤링해 자료 만들고 (데이터셋)\n",
-    "contents based 에서 \n",
-    "\n",
-    "similarity search, TF-IDF 직접 구현\n",
-    "\n",
-    "model-based --> mini batch 구현"
    ]
   }
  ],
