--- a/Content-based Filtering/content-based.ipynb
+++ b/Content-based Filtering/content-based.ipynb
@@ -126,49 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b488faba-e674-4efc-931f-d4eaf46a7872",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nltk in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (3.6.3)\n",
-      "Requirement already satisfied: joblib in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (1.0.1)\n",
-      "Requirement already satisfied: regex in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (2021.4.4)\n",
-      "Requirement already satisfied: click in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (8.0.1)\n",
-      "Requirement already satisfied: tqdm in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from nltk) (4.49.0)\n",
-      "Requirement already satisfied: importlib-metadata in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from click->nltk) (4.0.1)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.4 in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from importlib-metadata->click->nltk) (3.7.4.3)\n",
-      "Requirement already satisfied: zipp>=0.5 in /home/namkyeong/anaconda3/envs/HDGI/lib/python3.7/site-packages (from importlib-metadata->click->nltk) (3.4.1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/namkyeong/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/namkyeong/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /home/namkyeong/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install nltk\n",
     "import re\n",
@@ -184,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c0242758-b401-4b17-ae05-e889a3812aa3",
    "metadata": {},
    "outputs": [],
@@ -198,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "eafb6590-46f6-40d2-88f5-54891f514dde",
    "metadata": {},
    "outputs": [],
@@ -209,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "092660dd-1a53-4efc-9e8b-5a929d0b2b16",
    "metadata": {},
    "outputs": [],
@@ -229,54 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6ff1e2b4-bd81-427f-a6d2-f2e0fd716f5b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['The',\n",
-       " 'first',\n",
-       " 'time',\n",
-       " 'you',\n",
-       " 'see',\n",
-       " 'The',\n",
-       " 'Second',\n",
-       " 'Renaissance',\n",
-       " 'it',\n",
-       " 'may',\n",
-       " 'look',\n",
-       " 'boring',\n",
-       " '.']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "word_tokenize(corpus[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b6bf7c89-806a-4605-8bad-ffa80f462be9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['first', 'time', 'see', 'second', 'renaissance', 'may', 'look', 'boring']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenize(corpus[0])"
    ]
@@ -460,6 +387,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95821d6c-4aa1-4ed5-b239-d53e8f49126f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_data = movie_data[:20000]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "73ba13a1-2b72-4638-861f-7f05a190bbb4",
    "metadata": {},
@@ -489,17 +426,6 @@
    "outputs": [],
    "source": [
     "tfidf_matrix.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65d1ea07-5606-457b-aeb5-3a99dc25fd58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tfidf_matrix = pd.DataFrame(tfidf_matrix, columns=tfidf_matrix_feature, index = movie_data.title)\n",
-    "tfidf_matrix.head()"
    ]
   },
   {
